--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </script>
   <div class="top"></div>
   <div class="width15 m0a"><img src="img/1.jpg" /></div>
-  <div class="tac lh30 c0 fs20 mt10">允许离校，学号：20180201699，<br/>姓名：刘超，当前时间<span id="show"></span></div>
+  <div class="tac lh30 c0 fs20 mt10">允许离校，学号：20180201670，<br/>姓名：李乙萍，当前时间<span id="show"></span></div>
   
 </body>
 </html>
